# code_ver

./: .gitattributes  .gitignore  ARCHITECTURE.md  GLOSSARY.md  METHODOLOGY.md  README.md  RESULTS.md  RUNNING.md  pyproject.toml
.github/workflows/: ci.yml
dev-history/: README.md
src/trustladder/analysis/: _model.py  analysis.py  analysis_config.json  dummy.py  sql_report.py  stats.py
src/trustladder/analysis/sql/: by_stratum.sql  per_arm.sql  schema.sql  violations_by_class.sql
src/trustladder/demo/: __init__.py  mini_pipeline.py
src/trustladder/demo/fixture/artifacts/clean/t01/: run_tests.py
src/trustladder/demo/fixture/artifacts/clean/t01/invoicing/: totals.py
src/trustladder/demo/fixture/artifacts/defective/t01/invoicing/: totals.py
src/trustladder/demo/fixture/battery/keys/t01/: key_tests.py
src/trustladder/demo/fixture/battery/manifest/: t01.json
src/trustladder/grading/: README.md  build_calibration.py  extract_claims.py  grade_calibration.py  grade_defects.py  grade_run.py  known_fix_patterns.json  recall_scan.py  record_recall_ruling.py  severity_rubric.py  stage_b_loader.py
src/trustladder/ledger/: ap7_routing.py  classify.py  contamination.py  extract.py  llm_lane.py
src/trustladder/packets/: gen_packet.py
src/trustladder/schema/: SCHEMA_DOCS.md  derive.py  emit_record.py  reason_codes.json  run_record.schema.json  telemetry.py  telemetry_event.schema.json
src/trustladder/schema/eval_export/: README.md  export_eval.py  verify_export.py
src/trustladder/schema/signing/: check_guard_watchlist.py  demo_chain.py  keygen.py  receipt.py  verify_chain.py
tests/: test_grading_seam.py  test_mini_pipeline.py  test_offline_pipeline.py  test_sql_report.py  test_stats.py
